[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/BADABB__.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Sprites/Startbtn.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Highscorebtn.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Quitbtn.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/landscape.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 80
use_filter = true
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = 1.0
script = ExtResource( 1 )

[node name="Start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.857
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_right = 400.432
margin_bottom = 287.0
rect_scale = Vector2( 0.25, 0.25 )
icon = ExtResource( 3 )

[node name="Highscores" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 51.0
margin_right = 766.0
margin_bottom = 373.0
rect_scale = Vector2( 0.25, 0.25 )
icon = ExtResource( 4 )

[node name="Quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 137.0
margin_right = 766.0
margin_bottom = 459.0
rect_scale = Vector2( 0.25, 0.25 )
icon = ExtResource( 5 )

[node name="Title" type="Label" parent="."]
margin_left = 342.0
margin_top = 109.0
margin_right = 702.0
margin_bottom = 195.0
custom_colors/font_color = Color( 0.137255, 0.137255, 0.137255, 1 )
custom_fonts/font = SubResource( 1 )
text = "MUPPA SARIO"
uppercase = true

[node name="Background" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 511, 306 )
scale = Vector2( 0.541514, 0.58913 )
texture = ExtResource( 6 )

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Highscores" to="." method="_on_Highscores_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
